Fix map z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,4 +14,5 @@ input[type="radio"] {
 
 #map {
   height: 50vh;
+  z-index: 0;
 }
